# BlazeBolt-game-engine-1.0

./: .gitignore  .gitmodules  BlazeBolt.desktop  BlazeBolt.rc.in  CMakeLists.txt  DOCS.md  DOCUMENTATION.md  LICENCE.txt  README.md  VULKAN_ARCHITECTURE.md  build.forExeBoi  build.py  converted.md  documentation.html
assets/engine/scripts/: animation_wheel_example.lua  main.lua
core/: debugTimer.h  scene.cpp  scene.h  sceneFormat.hpp  world.h
core/engine/: gui.h  lua.h  lua.hpp  luaEngine.cpp  luaEngine.hpp  luaFunctions.hpp  luaMathBindings.hpp  luaNetBindings.hpp  luaSceneManager.hpp  luaTypes.hpp  lua_api_init.hpp  lua_api_init.lua  lua_engine.cpp  lua_engine.h  lua_functions.h  lua_scene_manager.h  lua_types.h  managers.cpp  managers.hpp
core/graphics/: animatedTexture2D.cpp  animatedTexture2D.hpp  gl.cpp  gl.hpp  mesh.h  quad.cpp  quad.hpp  shader.h  spriteBatch2D.cpp  spriteBatch2D.hpp  textureManager.cpp  textureManager.hpp  window.cpp  window.h
core/graphics/gl/: GLBuffer.cpp  GLBuffer.h  GLPipeline.cpp  GLPipeline.h  GLRenderContext.cpp  GLRenderContext.h  GLRenderDevice.cpp  GLRenderDevice.h  GLSampler.cpp  GLSampler.h  GLShader.cpp  GLShader.h  GLSwapChain.cpp  GLSwapChain.h  GLTexture.cpp  GLTexture.h
core/graphics/renderer/: Buffer.h  Pipeline.h  RenderAPI.h  RenderBackend.cpp  RenderBackend.h  RenderContext.h  RenderDevice.h  Sampler.h  Shader.h  SwapChain.h  Texture.h  Types.h
core/graphics/vk/: VkBuffer.cpp  VkBuffer.h  VkPipeline.cpp  VkPipeline.h  VkRenderContext.cpp  VkRenderContext.h  VkRenderDevice.cpp  VkRenderDevice.h  VkSampler.cpp  VkSampler.h  VkShader.cpp  VkShader.h  VkSwapChain.cpp  VkSwapChain.h  VkTexture.cpp  VkTexture.h  VkUtils.h
core/gui/: gui.h  gui_draw.h  gui_font.h  gui_system.h  gui_widget.h
core/physics/: body.cpp  body.h  collision.cpp  collision.h  physics.h  types.h  world.cpp  world.h
core/subject/: animatad2D.h  audio.h  camera2D.cpp  camera2D.hpp  light2D.cpp  light2D.hpp  particle2D.cpp  particle2D.hpp  sprite2D.cpp  sprite2D.h  sprite2D.hpp  text.h  text2D.cpp  text2D.hpp  tileset2D.cpp  tileset2D.hpp
core/subject/sprite/: animatedSprite2D.cpp  animatedSprite2D.hpp  animationWheel.cpp  animationWheel.hpp  generalSprite.cpp  generalSprite.hpp  staticSprite2D.cpp  staticSprite2D.hpp
core/utils/: dr_mp3.h  input.cpp  input.hpp
core/utils/input/: input.h
core/utils/math/: noise.h  vector.h
core/utils/net/: client.cpp  client.hpp  netCommon.hpp  server.cpp  server.hpp
docs/: index.html  lua-api.html  lua-api.md
documentationcs/: DOCS.md  DOCUMENTATION.md  documentation.html  index.html
documentations/: DOCS.md  documentation.html
hub/: .gitignore  CMakeLists.txt  blazebolt_projects.json  main.py
hub/include/imgui/: imgui_bezier_math.inl  imgui_canvas.h  imgui_extra_math.h  imgui_node_editor.h
hub/projects/test/engine/: scripts.list
hub/projects/test/engine/scripts/: main.lua
hub/src/: editor.cpp  editor.hpp  hub.cpp  hub.hpp  main.cpp  node_editor.cpp  node_editor.hpp  node_types.hpp
include/freetype/: ft2build.h
include/imgui/: crude_json.cpp  crude_json.h  imgui.cpp  imgui_bezier_math.h  imgui_canvas.cpp  imgui_extra_math.inl  imgui_node_editor.cpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: editor.cpp  editor.hpp  game.cpp  hub.cpp  hub.hpp  main.cpp  title_bar.hpp
